[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Bear <csaba.ferenclaszlo@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
